[package]
name = "collecting-hashmap"
version = "0.1.0"
authors = ["Paul Woolcock <paul@woolcock.us>"]
edition = "2018"
documentation = "https://docs.rs/collecting-hashmap"
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/pwoolcoc/collecting-hashmap"
description = """
A hashmap that will store multiple values for a key
"""

[dependencies]
